<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please fill in the following information"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="(It will take up to 3 days for admin to verify and reset the password)"
            android:textAlignment="center"
            android:textColor="#000000" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColorHint="#000000"
            app:passwordToggleTint="#000000">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name1"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColorHint="#000000"
            app:passwordToggleTint="#000000">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_id1"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="#000000"
            app:passwordToggleTint="#000000">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password1"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="#000000"
            app:passwordToggleTint="#000000">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/beneficiaryaddress1"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="#000000"
            app:passwordToggleTint="#000000">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/beneficiarycountry1"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#3E3E3E"
            android:onClick="sendNotification"
            android:text="Submit"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
